deploy/celery.yaml
---

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: kae-console-celery
  name: kae-console-celery
  namespace: kae
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: kae-console-celery
  template:
    metadata:
      labels:
        k8s-app: kae-console-celery
    spec:
      serviceAccountName: kae-console-serviceaccount
      containers:
      - name: kae-console-celery
        image: yuyang0/kae-console:0.0.1-alpha4
        imagePullPolicy: Always
        command: ["celery", "-A", "console.app:celery", "worker", "--autoscale=4,2", "-B"]
        args:
          # Uncomment the following line to manually specify Kubernetes API server Host
          # If not specified, Dashboard will attempt to auto discover the API server and connect
          # to it. Uncomment only if the default does not work.
          # - --apiserver-host=http://my-address:port
        volumeMounts:
        - name: docker-sock-volume
          mountPath: /var/run/docker.sock
        - name: kae-console-secret-vol
          mountPath: /etc/k8s-secret-volume
      volumes:
      - name: docker-sock-volume
        hostPath:
          # location on host
          path: /var/run/docker.sock
          # this field is optional
          type: File
      - name: kae-console-secret-vol
        secret:
          secretName: kae-console
      serviceAccountName: kae-console-serviceaccount
      # Comment the following tolerations if console must not be deployed on master
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
